ags (0.7.40)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed zero-length notes in ags_note_duplicate() and return NULL
	* fixed negative-length notes in ags_note_duplicate() by swapping x values
	* fixed encoding special char of strings in ags_turtle.c
	* improved regexp to read string literals in ags_turtle.c
	* improved AgsLineMember and AgsBulkMember to escape their strings

ags (0.7.39)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsLv2Worker to return from AgsReturnableThread
	* fixed some memory leaks in ags_recall_lv2_run.c
	* fixed annoying painting mistake in ags_meter.c missing padding caused ugly effect on top
	* fixed AGS_MACHINE_SELECTOR_SHOW_REVERSE_MAPPING and AGS_MACHINE_SELECTOR_SHOW_SHIFT_PIANO are removed from ags_automation_editor.c because it is not supported
	* improved AgsThreadPool to take from the end of the list because previously it took the ones just instantiated

ags (0.7.38)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed remove of effects because refactoring broke it
	* fixed remove of automation as removing effect because before it was left there
	* fixed remove automation as shrink audio channels or pads
	* fixed XPath and xmlNode names of turtles to lower-case
	* fixed XPath expressions in ags_lv2_plugin.c to access plugin correctly because it returned all plugins instead of one
	* implemented update automation editor on add/remove effect look at ags_automation_editor_reset_port(), it is new
	* implemented prefix of AgsNotebook now for automation line and notation channel
	* added mutices to ags_toolbar.c

ags (0.7.37)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed infinite loop in ags_automation_editor.c - line = line++
	* fixed restore of controls
	* fixed AgsNavigation set bpm
	* fixed missing length of AgsDrum and AgsMatrix
	* optimized XML file output

ags (0.7.36)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]